force-app/main/default/objects/ResumenGlobalPostventa__c/ResumenGlobalPostventa__c.object-meta.xml
<CustomObject>
    <label>Resumen global postventa</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Resumen</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumenes globales postventa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>