force-app/main/default/objects/ResumenGlobalPostventa__c/fields/Anio__c.field-meta.xml
<CustomField>
    <fullName>Anio__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Año</label>
    <length>255</length>
    <type>Text</type>
</CustomField>