force-app/main/default/objects/ResumenGlobalPostventa__c/fields/Banker__c.field-meta.xml
<CustomField>
    <fullName>Banker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Banquero</label>
    <referenceTo>BranchUnitBusinessMember</referenceTo>
    <relationshipLabel>Resumenes globales postventa</relationshipLabel>
    <relationshipName>Resumenes_globales_postventa</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>