force-app/main/default/objects/ResumenGlobalPostventa__c/fields/CentroFinanciero__c.field-meta.xml
<CustomField>
    <fullName>CentroFinanciero__c</fullName>
    <formula>Owner:User.F3_Division__c</formula>
    <label>Centro financiero</label>
    <type>Text</type>
</CustomField>