force-app/main/default/objects/ResumenGlobalPostventa__c/fields/Contactados__c.field-meta.xml
<CustomField>
    <fullName>Contactados__c</fullName>
    <label>Contactados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>