force-app/main/default/objects/ResumenGlobalPostventa__c/fields/ContactadosMensual__c.field-meta.xml
<CustomField>
    <fullName>ContactadosMensual__c</fullName>
    <label>Contactados mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>