force-app/main/default/objects/ResumenGlobalPostventa__c/fields/Estatus_meta__c.field-meta.xml
<CustomField>
    <fullName>Estatus_meta__c</fullName>
    <formula>IF(
				 PorcentajeAvance__c &gt;= 0.7,
				 IMAGE(&quot;/servlet/servlet.FileDownload?file=015dz000001r9Kk&quot;, &quot;Verde&quot;, 15, 15),
				 IMAGE(&quot;/servlet/servlet.FileDownload?file=015dz000001r9pN&quot;, &quot;Rojo&quot;, 15, 15)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus meta</label>
    <type>Text</type>
</CustomField>