force-app/main/default/objects/ResumenGlobalPostventa__c/fields/ExternalId_Nomina__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_Nomina__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalId Nomina</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>