force-app/main/default/objects/ResumenGlobalPostventa__c/fields/ExternalId_NominaFecha__c.field-meta.xml
<CustomField>
    <fullName>ExternalId_NominaFecha__c</fullName>
    <externalId>true</externalId>
    <label>ExternalId Nomina Fecha</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>