force-app/main/default/objects/ResumenGlobalPostventa__c/fields/MetaMensual__c.field-meta.xml
<CustomField>
    <fullName>MetaMensual__c</fullName>
    <label>Meta mensual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>