force-app/main/default/objects/ResumenGlobalPostventa__c/fields/PorcentajeAvance__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeAvance__c</fullName>
    <formula>IF((Contactados__c / Meta__c) &gt;= 1, 1, (Contactados__c / Meta__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje de avance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>