force-app/main/default/objects/ResumenGlobalPostventa__c/fields/PorcentajeAvanceMensual__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeAvanceMensual__c</fullName>
    <label>Porcentaje de avance mensual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>